--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Setup pscale"
+name: "Setup pscale (unofficial)"
 description: "Installs the PlanetScale CLI (pscale) for use in GitHub Actions."
 author: "willgeorgetaylor"
 branding:
